<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_view_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_user"
            android:textColor="@color/colorPrimaryText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/linear_layout_text"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/list_view_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/text_list"
            android:visibility="visible" />

        <Button
            android:id="@+id/recycler_view_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_view_btn"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:text="@string/text_recycler_view"
            android:visibility="gone" />

        <Button
            android:id="@+id/float_button_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recycler_view_btn"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:text="@string/text_float_button"
            android:visibility="gone" />
    </LinearLayout>





    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation_view_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/select_item"
        app:itemTextColor="@drawable/select_item"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>